Map fixes and routes